--- a/london_parkive.css
+++ b/london_parkive.css
@@ -230,6 +230,7 @@ html, body, #map {
     background-color: white;
     box-shadow: 10px 10px 15px 5px rgba(0,0,0,0.3);
     position: relative;
+    display: none;
 
 }
 #launchPopup_close_icon{
